# wasmtime-resources-example

./: LICENSE  README.md
example-guest-export/: Cargo.toml
example-guest-export/src/: lib.rs
example-guest-export/wit/: example.wit
example-guest-import/: Cargo.toml
example-guest-import/src/: lib.rs
example-guest-import/wit/: example2.wit
example-host/: Cargo.toml  example.wit  example2.wit
example-host-export/: Cargo.toml  example_guest_import.wasm
example-host-export-index/: Cargo.toml  example2.wit  main copy 2.rs
example-host-export-index/src/: main.rs  main_generated.rs
example-host-export/src/: main.rs
example-host-import/: Cargo.toml  example.wit
example-host-import/src/: main.rs
example-host/src/: main.rs
